--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -761,3 +761,7 @@ mat-accordion {
 .angular-editor-textarea {
   background-color: #ffffff !important;
 }
+
+.material-info-padding.material-info {
+  padding-top: 0px;
+}
