--- a/src/app/shared/dialogs/payment-record/paymentRecord.component.html
+++ b/src/app/shared/dialogs/payment-record/paymentRecord.component.html
@@ -66,7 +66,7 @@
             </div>
           </div>
           <div class="col-xs-12 text-center p-t-20 p-b-10">
-            <button class="btn btn-warning next-btn" [disabled]="!paymentForm.valid">Add</button>
+            <button type="submit" class="btn btn-warning next-btn" [disabled]="!paymentForm.valid">Add</button>
           </div>
         </form>
       </mat-tab>
