--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -29,6 +29,7 @@
 @import "./pages/common.scss";
 @import "./pages/add-mymaterial.scss";
 @import "./pages/paymentRecord.scss";
+@import "./pages/ngx-date.scss";
 
 ::ng-deep .mat-horizontal-stepper-header {
   pointer-events: none !important;
