--- a/src/app/features/app-dashboard/app-dashboard.component.html
+++ b/src/app/features/app-dashboard/app-dashboard.component.html
@@ -54,10 +54,10 @@
           </div>
         </div>
 
-        <div class="statistics bg-white p-4 mb-4">
+        <div class="statistics bg-white p-4 p-r-0 mb-4">
           <div class="row">
-            <div class="col-md-12 d-flex justify-content-between">
-              <mat-tab-group class="mat-tabs-button">
+            <div class="col-xs-7 p-r-0 p-l-0">
+              <mat-tab-group class="mat-tabs-button" (selectedTabChange)="onTabChanged($event)">
                 <mat-tab label="{{ tab1 }}" *ngIf="permissionObj.rfqFlag && poData">
                   <div class="statistics__purchase-order d-flex">
                     <div class="statistics__tile stats mr-3">
@@ -136,11 +136,28 @@
                   </div>
                 </mat-tab>
               </mat-tab-group>
-
-              <div class="statistics__filter">
-                <h5>This Month</h5>
-              </div>
             </div>
+
+            <div class="col-xs-2 p-l-25 p-r-0">
+              <form [formGroup]="filterForm">
+                <mat-form-field class="border-select select-project width103Percent mat-form-field-flex-mm-padding">
+                  <mat-label>Select Project</mat-label>
+                  <mat-select formControlName="projectFilter" multiple>
+                    <div class="display-flex">
+                      <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name" [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
+                      <button mat-button matSuffix mat-icon-button>
+                        <mat-icon>search</mat-icon>
+                      </button>
+                    </div>
+                    <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'" [value]="project">{{ project.projectName }} </mat-option>
+                  </mat-select>
+                </mat-form-field>
+              </form>
+            </div>
+            <div class="col-xs-3 p-r-0 p-l-20 widthWrapper customDatePicker">
+              <ngx-mat-drp class="border-input" (selectedDateRangeChanged)="updateRange($event)" [options]="options" #dateRangePicker></ngx-mat-drp>
+            </div>
+            <!-- <app-range-datePicker></app-range-datePicker> -->
           </div>
         </div>
 
