--- a/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
+++ b/src/app/features/rfq/create-rfq/rfq-project-materials/rfq-project-materials.component.html
@@ -1,14 +1,14 @@
 <form *ngIf="allProjects" [formGroup]="form">
-  <div class="row ">
+  <div class="row">
     <div class="col-xs-4 p-t-10 border-input">
-      <mat-form-field class=" input-search-padding-zero">
+      <mat-form-field class="input-search-padding-zero">
         <input matInput placeholder="Search Projects" type="search" [(ngModel)]="searchProject" [ngModelOptions]="{standalone: true}" />
         <button mat-button matSuffix mat-icon-button>
           <mat-icon>search</mat-icon>
         </button>
       </mat-form-field>
 
-      <mat-form-field class=" p-l-20 input-search-padding-zero">
+      <mat-form-field class="p-l-20 input-search-padding-zero">
         <input matInput placeholder="Search Material" type="search" [(ngModel)]="searchMaterial" [ngModelOptions]="{standalone: true}" />
         <button mat-button matSuffix mat-icon-button>
           <mat-icon>search</mat-icon>
@@ -48,7 +48,7 @@
 <form *ngIf="rfqDetails.length" [formGroup]="materialForm">
   <span formArrayName="forms">
     <div *ngFor="let project of rfqDetails | SearchPipe: searchProject:'projectName'; let p = index" [formGroupName]="p">
-      <mat-accordion *ngIf="rfqDetails" class="rfq-detail-body">
+      <mat-accordion *ngIf="rfqDetails && project.projectMaterialList.length" class="rfq-detail-body">
         <mat-expansion-panel class="myPanel" [expanded]="true">
           <mat-expansion-panel-header>
             <mat-panel-title>
