--- a/src/app/features/rfq/ref-detail/ref-detail.component.html
+++ b/src/app/features/rfq/ref-detail/ref-detail.component.html
@@ -11,7 +11,7 @@
         </div>
       </div>
 
-      <button mat-raised-button [routerLink]="['../../rfq/createRfq']" class="main-background-color main-button color-white">
+      <button mat-raised-button [routerLink]="['/rfq/createRfq']" class="main-background-color main-button color-white">
         Create RFQ
       </button>
     </div>
