--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -309,7 +309,7 @@
                     >
                     <!-- <span>&nbsp;</span> -->
                     <span class="p-r-10"><a href="javascript:void(0)" style="color: #f47721;" [routerLink]="['./view-grn/', element.purchaseOrderId]">Add/View GRN</a></span>
-                    <span class="p-r-10 cursor-pointer material-icons main-color"><a (click)="openPaymentRecord()" matTooltip="Payment Record">attach_money</a></span>
+                    <!-- <span class="p-r-10 cursor-pointer material-icons main-color"><a (click)="openPaymentRecord()" matTooltip="Payment Record">attach_money</a></span> -->
                     <span class="p-r-10 cursor-pointer"
                       ><a (click)="downloadPo(element.purchaseOrderId)" matTooltip="Download PO"> <img src="../../../../assets/images/download-po.png" /> </a
                     ></span>
