--- a/src/app/shared/dialogs/add-address-po/add-addressPo.html
+++ b/src/app/shared/dialogs/add-address-po/add-addressPo.html
@@ -1,9 +1,9 @@
 <div class="header-add-edit-dialog p-r-0">
   <div class="row width-100">
-    <div class="col-sm-10">
+    <div class="col-xs-10">
       <h1 mat-dialog-title>Select Address</h1>
     </div>
-    <div class="col-sm-2">
+    <div class="col-xs-2">
       <button type="button" class="close pull-right p-t-5" (click)="close()" aria-label="Close">
         <span aria-hidden="true">×</span>
       </button>
@@ -21,7 +21,7 @@
             <div class="col-xs-12 p-t-10 show-address-po-modal">
               <mat-radio-group aria-label="Select an option" name="address" formControlName="address">
                 <div class="p-t-10 p-b-10 gray-border" *ngFor="let add of address">
-                  <mat-radio-button class="p-l-25" [value]="add" [checked]="add.primaryAddress===1">
+                  <mat-radio-button class="p-l-15" [value]="add" [checked]="add.primaryAddress===1">
                     <div class="max-width-of-select-address">
                       <span *ngIf="add.addressLine1">{{add.addressLine1}}</span>
                       <span *ngIf="add.addressLine2">, {{add.addressLine2}}</span>
@@ -52,7 +52,7 @@
       <form [formGroup]="newAddressForm">
         <div class="add-address-dialog-div-main">
           <div class="row">
-            <div class="col-xs-6">
+            <div class="col-xs-12 col-sm-6">
               <div class="row border-input">
                 <mat-form-field class="col-xs-12 ">
                   <input matInput type="text" placeholder="Address Line 1" formControlName="addressLine1" />
@@ -65,7 +65,7 @@
                 </small>
               </div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-12 col-sm-6">
               <div class="row border-input p-t-0">
                 <mat-form-field class="col-xs-12">
                   <input matInput type="text" placeholder="Address Line 2" formControlName="addressLine2" />
@@ -109,7 +109,7 @@
                 </mat-form-field>
               </div>
             </div>
-            <div class="col-xs-6">
+            <div class="col-xs-12 col-sm-6">
               <div class="row border-input p-t-0">
                 <mat-form-field class="col-xs-12">
                   <input matInput type="text" placeholder="GSTIN" formControlName="gstNo" />
