button name chnged Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/dialogs/select-po-role/selectPoRole.html
+++ b/src/app/shared/dialogs/select-po-role/selectPoRole.html
@@ -74,7 +74,7 @@
 
     <div class="row col-xs-12 p-t-10 justify-content-center">
       <button mat-raised-button class="main-background-color main-button color-white" (click)="selectRole()">
-        Select
+        Save
       </button>
     </div>
  
