--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -13,6 +13,8 @@
     <span class="mat-header-cell" mat-sort-header="estimatedQuantity">Estimated Quantity</span>
     <span class="mat-header-cell" mat-sort-header="requestedQuantity">Indented Quantity</span>
     <span class="mat-header-cell" mat-sort-header="requiredDate">Required Date</span>
+    <span class="mat-header-cell" mat-sort-header="requestedQuantity">Delivered Quantity</span>
+    <span class="mat-header-cell" mat-sort-header="requestedQuantity">Awarded Quantity</span>
     <span class="mat-header-cell" mat-sort-header="availableQuantity">Available Stock</span>
   </section>
 
@@ -37,6 +39,13 @@
             >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
           >
           <span class="mat-cell p-l-10"> {{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
+          <span class="mat-cell"
+            >{{ material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty : 0 }}
+            <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+          >
+          <span class="mat-cell"
+            >{{ material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.issuedQty : 0 }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+          >
           <span class="mat-cell p-l-45 m-l-20"
             >{{
               material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty - (material.GlobalMaterial.issuedQty ? material.GlobalMaterial.issuedQty : 0) : 0
@@ -55,6 +64,8 @@
                 <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span>
               </span>
               <span class="mat-cell">{{ indent.dueDate | date: "dd MMM yyy" }}</span>
+              <span class="mat-cell"></span>
+              <span class="mat-cell"></span>
               <span class="mat-cell"></span>
             </mat-expansion-panel-header>
           </div>
