--- a/src/app/features/global-store/material-wise/material-wise.component.html
+++ b/src/app/features/global-store/material-wise/material-wise.component.html
@@ -13,6 +13,8 @@
     <span class="mat-header-cell material" mat-sort-header="estimatedQty">Estimated Quantity</span>
     <span class="mat-header-cell material" mat-sort-header="requestedQuantity">Indented Quantity</span>
     <span class="mat-header-cell material" mat-sort-header="requiredDate">Required Date</span>
+    <span class="mat-header-cell material" mat-sort-header="requestedQuantity">Delivered Quantity</span>
+    <span class="mat-header-cell material" mat-sort-header="requestedQuantity">Awarded Quantity</span>
     <span class="mat-header-cell material" mat-sort-header="availableQuantity">Available Stock</span>
   </section>
   <div>
@@ -23,7 +25,6 @@
             {{ material.GlobalMaterial.materialName }}
           </div>
         </span>
-
         <span class="mat-cell">
           {{ material.GlobalMaterial.estimatedQty }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span>
         </span>
@@ -31,6 +32,12 @@
           >{{ material.GlobalMaterial.sum }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
         >
         <span class="mat-cell">{{ material.GlobalMaterial.nearDueDate | date: "dd MMM yyy" }}</span>
+        <span class="mat-cell"
+          >{{ material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty : 0 }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+        >
+        <span class="mat-cell"
+          >{{ material.GlobalMaterial.issuedQty != null ? material.GlobalMaterial.issuedQty : 0 }} <span class="p-l-5">{{ material.GlobalMaterial.materialUnit }}</span></span
+        >
         <span class="mat-cell"
           >{{
             material.GlobalMaterial.deliveredQty != null ? material.GlobalMaterial.deliveredQty - (material.GlobalMaterial.issuedQty ? material.GlobalMaterial.issuedQty : 0) : 0
@@ -53,6 +60,8 @@
           >
           <span class="mat-cell">{{ project.Projects.nearDueDate | date: "dd MMM yyy" }}</span>
           <span class="mat-cell"></span>
+          <span class="mat-cell"></span>
+          <span class="mat-cell"></span>
         </mat-expansion-panel-header>
         <div *ngFor="let material of project.Projects.indentMaterials">
           <mat-expansion-panel-header class="mat-row material-project-details">
@@ -60,6 +69,8 @@
             <span class="mat-cell"></span>
             <span class="mat-cell">{{ material.quantity }}</span>
             <span class="mat-cell">{{ material.dueDate | date: "dd MMM yyy" }}</span>
+            <span class="mat-cell"></span>
+            <span class="mat-cell"></span>
             <span class="mat-cell"></span>
           </mat-expansion-panel-header>
         </div>
