--- a/src/app/shared/dialogs/payment-record/paymentRecord.component.html
+++ b/src/app/shared/dialogs/payment-record/paymentRecord.component.html
@@ -12,31 +12,25 @@
     </div>
   </div>
   <div class="col-xs-12 p-t-20">
-    <mat-card class="width78Percent gray-border">
+    <mat-card class="width78Percent gray-border" *ngIf="paymentDetail">
       <div class="row">
-        <div class="col-xs-5">
-          Total PO Amount :
-        </div>
+        <div class="col-xs-5">Total PO Amount : {{ paymentDetail.poAmount }}</div>
         <div class="col-xs-1 p-l-0">
           <div class="info">
             <mat-icon class="material-info-padding round-button color-white main-background-color">info</mat-icon>
             <div id="infoIcon">
               <div class="row">
-                <div class="col-sm-12">
-                  Total Amount
-                </div>
-                <div class="col-sm-12">
-                  GST Amount
-                </div>
+                <div class="col-sm-12">Total Amount : {{ paymentDetail.poAmount - paymentDetail.gstAmount }}</div>
+                <div class="col-sm-12">GST Amount :{{ paymentDetail.gstAmount }}</div>
               </div>
             </div>
           </div>
         </div>
-        <div class="col-xs-6">Amount Paid till date :</div>
+        <div class="col-xs-6">Amount Paid till date : {{ paymentDetail.paymentRecived }}</div>
       </div>
       <div class="row">
-        <div class="col-xs-6">GRN Amount :</div>
-        <div class="col-xs-6">Amount Due :</div>
+        <div class="col-xs-6">GRN Amount : {{ paymentDetail.grnAmount }}</div>
+        <div class="col-xs-6">Amount Due : {{ paymentDetail.poAmount - paymentDetail.paymentRecived }}</div>
       </div>
     </mat-card>
   </div>
@@ -82,7 +76,7 @@
 
             <ng-container matColumnDef="Date">
               <th mat-header-cell *matHeaderCellDef>Date</th>
-              <td mat-cell *matCellDef="let element">{{ element.date }}</td>
+              <td mat-cell *matCellDef="let element">{{ element.paymentDate }}</td>
             </ng-container>
 
             <ng-container matColumnDef="Transaction ID">
@@ -95,7 +89,7 @@
             <ng-container matColumnDef="Added By">
               <th mat-header-cell *matHeaderCellDef class="text-align-center">Added By</th>
               <td mat-cell *matCellDef="let element" class="text-align-center">
-                {{ element.addedBy }}
+                {{ element.createdBy }}
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
