--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -1,18 +1,18 @@
 <!-- <fix-header></fix-header> -->
 
 <div class="page-start-point" *ngIf="rfqDetails">
-  <div class="p-l-20 p-r-20 p-b-20 min-height parent">
+  <div class="create-po-dashboard p-b-20 min-height parent">
     <div class="row m-b-10">
       <div class="col-md-12">
         <!-- first row -->
         <div class="row">
-          <div class="col-md-3">
+          <div class="col-xs-6 col-md-6">
             <div class="p-t-10">
               <label class="text-bold">RFQ Name: </label>
               {{ rfqDetails.rfqName }}
             </div>
           </div>
-          <div class="col-md-4 p-t-10">
+        <div class="col-xs-6 col-md-6 p-t-10 text-align-right">
             <label class="text-bold">RFQ End Date: </label>
             {{ rfqDetails.dueDate | date: "dd-MMM-yyy" }}
           </div>
@@ -27,16 +27,16 @@
 
         <!-- second row -->
         <div class="row m-b-10">
-          <div class="col-md-3" *ngFor="let supplier of rfqDetails.supplierDetails">
+          <div class="supplier-list-rfq-view col-md-3" *ngFor="let supplier of rfqDetails.supplierDetails">
             <mat-card>
               <div class="col-md-12 text-bold">
-                <label for="company ">{{ supplier.supplier_name }}</label>
+                <label for="company " class="word-break-all">{{ supplier.supplier_name }}</label>
               </div>
               <div class="col-md-12">
-                <label for="email">{{ supplier.email }}</label>
+                <label for="email" class="word-break-all">{{ supplier.email }}</label>
               </div>
               <div class="col-md-12">
-                <label for="phoneNumber">{{ supplier.contact_no }}</label>
+                <label for="phoneNumber" class="word-break-all">{{ supplier.contact_no }}</label>
               </div>
             </mat-card>
           </div>
@@ -59,7 +59,7 @@
           <mat-expansion-panel-header>
             <mat-panel-title>
               {{ project.projectName }}
-              <div class="main-color p-l-15">
+              <div class="main-color p-l-15 font-size-vary-grn">
                 {{ project.defaultAddress.addressLine1 }}
                 {{ project.defaultAddress.addressLine2 }}
                 {{ project.defaultAddress.city }}
@@ -70,7 +70,8 @@
           </mat-expansion-panel-header>
 
           <!-- table -->
-          <table mat-table [dataSource]="project.projectMaterialList" class="mat-elevation-z8 col-sm-12">
+          <div class="add-unique-container mat-elevation-z8">
+          <table mat-table [dataSource]="project.projectMaterialList">
             <!-- Material Name Column -->
             <ng-container matColumnDef="Material Name">
               <th class="font-size14" mat-header-cell *matHeaderCellDef>Material Name</th>
@@ -110,6 +111,7 @@
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
             <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
           </table>
+          </div>
         </mat-expansion-panel>
       </ng-template>
     </mat-accordion>
