--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -988,6 +988,10 @@ h3 {
     padding: 0px 8px 0px 8px;
     color: #716d6d;
   }
+  .supplier-list-rfq-view{
+    padding: 0;
+    padding-top: 5px;
+  }
 }
 
 .show-download {
