--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -396,6 +396,9 @@ div.limited-character {
 div.limited-character.global {
   width: 230px;
 }
+div.limited-character.globalStore {
+  width: 11em;
+}
 
 .rfq-after-bid {
   .limited-character {
@@ -746,11 +749,11 @@ mat-icon {
 .header-project-menu.mat-menu-panel {
   width: 250px;
 }
-.header-project-menu.show-amount.mat-menu-panel{
+.header-project-menu.show-amount.mat-menu-panel {
   width: 125px;
 }
-.header-project-menu.show-amount .main-div-bell .body-of-notification{
-  div:hover{
+.header-project-menu.show-amount .main-div-bell .body-of-notification {
+  div:hover {
     background: #d0d0d0;
   }
 }
@@ -999,24 +1002,24 @@ h3 {
   }
 }
 
-@media only screen and (max-width: 576px){
-  .supplier-screen{
-    .column-1{
-      order:2;
+@media only screen and (max-width: 576px) {
+  .supplier-screen {
+    .column-1 {
+      order: 2;
       width: 60%;
-    } 
-    .column-2{
-      order:1;
+    }
+    .column-2 {
+      order: 1;
     }
   }
 }
-@media only screen and (min-width: 576px){
-  .supplier-screen{
-    .column-1{
-      order:1;
-    } 
-    .column-2{
-      order:1;
+@media only screen and (min-width: 576px) {
+  .supplier-screen {
+    .column-1 {
+      order: 1;
+    }
+    .column-2 {
+      order: 1;
     }
   }
 }
