--- a/src/app/features/global-store/project-wise/project-wise.component.html
+++ b/src/app/features/global-store/project-wise/project-wise.component.html
@@ -27,7 +27,7 @@
       <mat-expansion-panel *ngFor="let material of project.GlobalMaterials" class="myPanel">
         <mat-expansion-panel-header class="mat-row material-project">
           <span class="mat-cell" matTooltip=" {{ material.GlobalMaterial.materialName }}">
-            <div class="limited-character global">
+            <div class="limited-character globalStore">
               {{ material.GlobalMaterial.materialName }}
             </div>
           </span>
