sign in and sign up

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -15,10 +15,10 @@ a:hover {
   color: $main-color !important;
   text-decoration: none;
 }
-.backgound-none{
+.backgound-none {
   background: none;
 }
-.backgound-none-important{
+.backgound-none-important {
   background: none !important;
 }
 
@@ -73,25 +73,24 @@ a:hover {
   background-color: $main-color;
 }
 
-.max-height-300{
+.max-height-300 {
   max-height: 300px;
-} 
-.overflow-y-auto{
+}
+.overflow-y-auto {
   overflow-y: auto;
 }
-.overflow-x-auto{
+.overflow-x-auto {
   overflow-x: auto;
 }
-.overflow-y-hidden{
+.overflow-y-hidden {
   overflow-y: hidden !important;
 }
-.overflow-x-hidden{
+.overflow-x-hidden {
   overflow-x: hidden !important;
 }
-.border-bottom-grey{
- border-bottom : 1px solid #d8d8d8;
+.border-bottom-grey {
+  border-bottom: 1px solid #d8d8d8;
 }
-
 
 .blue-color {
   color: $blue-color;
@@ -511,6 +510,9 @@ a:hover {
 .width40Percent {
   width: 40%;
 }
+.width50Percent {
+  width: 50%;
+}
 .width94Percent {
   width: 94%;
 }
@@ -523,7 +525,7 @@ a:hover {
 .width60Percent {
   width: 60%;
 }
-.Width99Percent{
+.Width99Percent {
   width: 99%;
 }
 .margin-0-auto {
