--- a/src/assets/scss/pages/common.scss
+++ b/src/assets/scss/pages/common.scss
@@ -22,6 +22,11 @@
     padding-bottom: 0px !important ;
   }
 }
+.mat-form-field-arrow-padding {
+  .mat-form-field-wrapper .mat-form-field-flex .mat-form-field-infix .mat-select-arrow-wrapper {
+    padding-top: 0px !important ;
+  }
+}
 
 .mat-select-placeholder-padding {
   .mat-form-field-infix .mat-select-placeholder {
